Fix: css alertas

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -6,7 +6,10 @@
       alt="Logo Certfacil"
     />
 
-    <link rel="stylesheet"  href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </a>
 </header>
 
@@ -17,48 +20,43 @@
     </div>
     <form novalidate [formGroup]="form">
       <div [ngClass]="aplicaCssErro('email')">
-      <input
-        id="email"
-        type="email"
-        formControlName="email"
-        placeholder="Usuário"
-        formControlName="email"
-        required
-      />
-
-      <app-campo-control-erro
-
-
-      [mostrarErro]="verificaValidTouched('email')"
-      msgErro="Email inválido!">
-      </app-campo-control-erro>
+        <input
+          id="email"
+          type="email"
+          formControlName="email"
+          placeholder="Usuário"
+          formControlName="email"
+          required
+        />
       </div>
+      <app-campo-control-erro
+        [mostrarErro]="verificaValidTouched('email')"
+        msgErro="Email inválido!"
+      >
+      </app-campo-control-erro>
 
       <div [ngClass]="aplicaCssErro('password')">
-      <input
-        id="password"
-        type="password"
-        formControlName="password"
-        placeholder="Senha"
-        formControlName="password"
-        required
-        [type]= "hide ? 'password': 'text' "
-      />
-       <i class="material-icons" matSuffix (click) = "hide = !hide">
-           {{  hide ? 'visibility' : 'visibility_off'}}
-         </i>
-
-      <app-campo-control-erro
-      [mostrarErro]="verificaValidTouched('password')"
-      msgErro="Campo obrigatório!">
-      </app-campo-control-erro>
+        <input
+          id="password"
+          type="password"
+          formControlName="password"
+          placeholder="Senha"
+          formControlName="password"
+          required
+          [type]="hide ? 'password' : 'text'"
+        />
+        <i class="material-icons" matSuffix (click)="hide = !hide">
+          {{ hide ? "visibility" : "visibility_off" }}
+        </i>
       </div>
+      <app-campo-control-erro
+        [mostrarErro]="verificaValidTouched('password')"
+        msgErro="Campo obrigatório!"
+      >
+      </app-campo-control-erro>
     </form>
 
-
-
-
-      <button class="button" type="submit" (click)="onSubmit()">Entrar</button>
+    <button class="button" type="submit" (click)="onSubmit()">Entrar</button>
     <div class="recover">
       <h5>
         Esqueceu sua senha?
