--- a/src/app/pages/createevent/createevent.component.css
+++ b/src/app/pages/createevent/createevent.component.css
@@ -20,7 +20,8 @@
 .form-content {
   margin: 35px auto;
   width: 468px;
-  height: 700px;
+  padding-bottom: 15px;
+  height: fit-content;
   background: #ffd1e5;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 30px;
