--- a/src/app/pages/edit-event/edit-event.component.scss
+++ b/src/app/pages/edit-event/edit-event.component.scss
@@ -78,6 +78,7 @@
   padding-right: 20px;
 }
 
+
 .button {
   padding-left: 5px 10px;
   width: 200px;
@@ -117,18 +118,46 @@ input:focus {
   margin: 0;
   padding: 0;
 }
-.form-box form .checkbox input {
-  margin: 0 3px 2px 0;
+
+.container .form-box .form-content  .checkbox div {
+  width: 270px;
+  margin: auto;
+  justify-content: center;
+  display: flex;
+  align-items: center;
 }
-.form-box form .checkbox label {
+
+
+
+.container .form-box .form-content .checkbox{
+  display: flex;
+  justify-content: center;
+  padding: 0 0 10px;
+  width: 50%;
+  margin: 0 auto;
+
+}
+
+.container .form-box .form-content .checkbox div input{
+  margin: 0 3px 2px 0;
+  width: fit-content;
+  cursor: pointer;
+}
+
+
+
+.container  .form-box .form-content form .checkbox div label {
+  background: none;
+  padding: 0px;
   font-family: "Nunito";
   font-weight: bold;
   font-size: 13px;
   color: #666666;
   margin: 0;
+  box-shadow: none;
+  width: fit-content;
+  cursor: default;
 }
 
-.form-box .form-content form .checkbox input {
-  margin: 0 3px 2px 0;
-}
+
 
