Fix: correção solicitada pela a equipe de teste

--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -22,7 +22,7 @@
           online ficou fácil
         </h1>
         <h5>Certificados online prontos em instantes.</h5>
-        <a class="button-register" href="/register">Cadastra-se</a>
+        <a class="button-register" href="/register">Cadastre-se</a>
       </div>
       <div class="content-img">
         <img src="../../../assets/images/img-bg.png" alt="Certfacil" />
