--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -33,11 +33,12 @@
               type="text"
               formControlName="nome"
               placeholder="Nome completo*"
+              autocomplete="off"
               required
             />
             <app-campo-control-erro
             [mostrarErro]="verificaValidTouched('nome')"
-            msgErro="Campo obrigatório!">
+            msgErro="Campo Invalido!">
 
             </app-campo-control-erro>
           </div>
@@ -53,7 +54,7 @@
             />
             <app-campo-control-erro
             [mostrarErro]="verificaValidTouched('apelido')"
-            msgErro="Campo obrigatório!">
+            msgErro="Campo Invalido!">
 
             </app-campo-control-erro>
           </div>
@@ -64,11 +65,11 @@
               id="documento"
               type="text"
               formControlName="documento"
-              placeholder="CPF*"
+              placeholder="CPF* | Ex: 16029992015"
             />
             <app-campo-control-erro
             [mostrarErro]="verificaValidTouched('documento')"
-            msgErro="Campo obrigatório!">
+            msgErro="Campo Invalido!">
 
             </app-campo-control-erro>
           </div>
@@ -76,7 +77,7 @@
           <div [ngClass]="aplicaCssErro('email')">
             <input
               class="input"
-              id="email"
+              id="user"
               type="email"
               formControlName="email"
               placeholder="Email*"
@@ -84,22 +85,23 @@
             />
             <app-campo-control-erro
             [mostrarErro]="verificaValidTouched('email')"
-            msgErro="Email inválido!">
+            msgErro="Campo Invalido!">
             </app-campo-control-erro>
           </div>
 
           <div [ngClass]="aplicaCssErro('celular')">
             <input
               class="input"
-              id="celular"
+              id="Telefone"
               type="tel"
+              autocomplete="off"
               formControlName="celular"
-              placeholder="Telefone*"
+              placeholder="Telefone* | Ex: 75900001111"
               required
             />
             <app-campo-control-erro
             [mostrarErro]="verificaValidTouched('celular')"
-            msgErro="Campo obrigatório!">
+            msgErro="Campo Invalido!">
 
             </app-campo-control-erro>
           </div>
@@ -108,14 +110,27 @@
             <input
               class="input"
               id="campus"
-              type="text"
+              type="search"
               formControlName="campus"
               placeholder="Unidade*"
+              list="listcampus"
               required
             />
+            <datalist id="listcampus">
+              <option value="Salvador"></option>
+              <option value="Comércio"></option>
+              <option value="Feira de Santana"></option>
+              <option value="Itabuna"></option>
+              <option value="Jequié"></option>
+              <option value="Petrolina"></option>
+              <option value="Juazeiro"></option>
+              <option value="Camaçari"></option>
+              <option value="Vitória da Conquista"></option>
+
+            </datalist>
             <app-campo-control-erro
             [mostrarErro]="verificaValidTouched('campus')"
-            msgErro="Campo obrigatório!">
+            msgErro="Campo Invalido!">
 
             </app-campo-control-erro>
           </div>
@@ -123,15 +138,27 @@
           <div [ngClass]="aplicaCssErro('semestre')">
             <input
               class="input"
-              id="semestre"
-              type="text"
+              type="search"
               formControlName="semestre"
               placeholder="Semestre*"
+              list="listsemes"
               required
             />
+            <datalist id="listsemes">
+              <option value="1"></option>
+              <option value="2"></option>
+              <option value="3"></option>
+              <option value="4"></option>
+              <option value="5"></option>
+              <option value="6"></option>
+              <option value="7"></option>
+              <option value="8"></option>
+              <option value="9"></option>
+              <option value="10"></option>
+            </datalist>
             <app-campo-control-erro
             [mostrarErro]="verificaValidTouched('semestre')"
-            msgErro="Campo obrigatório!">
+            msgErro="Campo Invalido!">
 
             </app-campo-control-erro>
           </div>
@@ -150,7 +177,7 @@
             </i>
             <app-campo-control-erro
             [mostrarErro]="verificaValidTouched('password')"
-            msgErro="Campo obrigatório!">
+            msgErro="Campo Invalido!">
 
             </app-campo-control-erro>
           </div>
@@ -169,7 +196,7 @@
             </i>
             <app-campo-control-erro
             [mostrarErro]="verificaValidTouched('confirm')"
-            msgErro="Campo obrigatório!">
+            msgErro="Campo Invalido!">
 
             </app-campo-control-erro>
           </div>
@@ -197,7 +224,7 @@
             </div>
             <app-campo-control-erro
             [mostrarErro]="verificaValidTouched('tipo_usuario')"
-            msgErro="Selecione um perfil!">
+            msgErro="Campo Invalido!">
 
             </app-campo-control-erro>
           </div>
