--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="cabecalho">
-  <a href="">
+  <a href="/home">
     <img
       class="logo"
       src="../../../assets/images/logo-certfacil.png"
