--- a/src/app/pages/edit-event/edit-event.component.html
+++ b/src/app/pages/edit-event/edit-event.component.html
@@ -41,6 +41,16 @@
           </app-campo-control-erro>
           </div>
 
+          <div [ngClass]="aplicaCssErro('video')">
+            <input
+            formControlName="video"
+            type="text"
+            placeholder="URL: {{video}}"
+          />
+          <app-campo-control-erro [mostrarErro]="verificaValidTouched('carga_horaria')" msgErro="Caracteres Invalidos!">
+          </app-campo-control-erro>
+          </div>
+
           <div class="checkbox" [ngClass]="aplicaCssErro('ativo')">
             <div>
               <input
