--- a/src/app/pages/event/event.component.html
+++ b/src/app/pages/event/event.component.html
@@ -24,8 +24,8 @@
           >
         </div>
 
-        <div class="video">
-          <a href="#">
+        <div class="video" *ngIf="event.ativo === 0">
+          <a href="{{event.video}}" target="_blank">
             <h3>Ver vídeo</h3>
           </a>
         </div>
