--- a/src/app/shared/campo-control-erro/campo-control-erro.component.html
+++ b/src/app/shared/campo-control-erro/campo-control-erro.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="mostrarErro" >
     <span class="glyphicon glyphicon-remove form-control-feedback"></span>
     <span class="sr-only">(error)</span>
-    <div class="alert alert-danger errorDiv" role="alert">
+    <div class="alert alert-warning errorDiv" role="alert">
       {{ msgErro }}
     </div>
   </div>
