Fix: Correção do update de eventos

--- a/src/app/pages/edit-event/edit-event.component.html
+++ b/src/app/pages/edit-event/edit-event.component.html
@@ -35,6 +35,7 @@
             <input
             formControlName="carga_horaria"
             type="number"
+            value="{{cargaevent}}"
             placeholder="Carga Horaria: {{cargaevent}}"
           />
           <app-campo-control-erro [mostrarErro]="verificaValidTouched('carga_horaria')" msgErro="Caracteres Invalidos!">
