Fix: Correção de home

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
   <div class="container">
     <app-headermenu></app-headermenu>
     <div class="content">
-      <div class="custom-control custom-checkbox" *ngIf="typeuser === 'master'">
+      <div class="custom-control custom-checkbox" *ngIf="view">
         <p class="text" center>{{ texto }}</p>
 
         <div class="onoffswitch">
