--- a/src/app/pages/myevents/myevents.component.html
+++ b/src/app/pages/myevents/myevents.component.html
@@ -25,7 +25,7 @@
               >Confirmar Presença</a> <br>
             </div>
             <div *ngIf="buttondown">
-              <a class="btn-sign-up" (click)="downloadpdf(event.descricao, event.carga_horaria, event.data_inicio, event.presenca_2, event.presenca_1)"
+              <a class="btn-sign-up" (click)="downloadpdf(event.descricao, event.carga_horaria, event.data_inicio, event.presenca_2, event.presenca_1, event.id_modelo)"
               >Download PDF</a>
             </div>
           </div>
