--- a/src/app/shared/pdf/pdf.component.html
+++ b/src/app/shared/pdf/pdf.component.html
@@ -1,4 +1,5 @@
-<div class="content" id="content" #content [ngStyle]="{'background-image': 'url(' + url_back + ')'}">
+
+<div class="content" id="content" crossorigin="anonymous" #content [ngStyle]="{'background-image': 'url(' + url_back + ')'}"> 
   <br><br><br><br>
   <h3 [ngStyle]="{'color': cor_texto}">Certificado de Participação</h3><br>
   <h1 [ngStyle]="{'color': cor_titulo}">{{titulo}}</h1><br>
